# cv_basic

./: README.md
src/: CMakeLists.txt  main.cpp  quick.cpp  quick.h
